Align should now be fixed
Seems to be a problem between local and deployed for this alignment. I hope this is now fixed.

--- a/src/Pages/Projects/Projects.module.css
+++ b/src/Pages/Projects/Projects.module.css
@@ -1,10 +1,9 @@
 .projects_title {
   font-weight: 300;
   text-decoration: underline;
-  text-align: center;
 }
 
-.projects_subtitle {
+.projects_text {
   text-align: center;
 }
 
